CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(hello)

IF(NOT CMKAE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(hello SHARED
    include/hello.h
    src/hello.cc
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(sayhello src/useHello.cc)
TARGET_LINK_LIBRARIES(sayhello hello)

INSTALL(FILES include/hello.h 
    DESTINATION include)
INSTALL(TARGETS hello
    LIBRARY DESTINATION lib
)
